WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307961
[YARR] Fix out-of-bounds table access in JIT case-insensitive backreference matching
https://bugs.webkit.org/show_bug.cgi?id=307961
Summary
[YARR] Fix out-of-bounds table access in JIT case-insensitive backreference m...
Sosuke Suzuki
Reported
2026-02-15 18:25:46 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-15 18:27:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58770
EWS
Comment 2
2026-02-18 16:28:16 PST
Committed
307793@main
(b2d8670b72c1): <
https://commits.webkit.org/307793@main
> Reviewed commits have been landed. Closing PR #58770 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-18 16:29:12 PST
<
rdar://problem/170677801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug